<?xml version="1.0"?>
<package format="2">
    <name>ros_utils</name>
    <version>0.0.0</version>
    <description>The ROS package for the project "listen_and_save"</description>

    <maintainer email="solomentsev.yak@phystech.edu">Yaroslav Solomentsev</maintainer>

    <license>2-clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>message_filters</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <exec_depend>image_transport</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
</package>
